Cropper Design Fixed

--- a/main/client/components/profilePicModal/profilePicModal.scss
+++ b/main/client/components/profilePicModal/profilePicModal.scss
@@ -14,6 +14,12 @@
   top: 0;
   background: #fff;
 }
+#profile-pic-modal .modal-footer{
+  position: absolute;
+  bottom: 10px;
+  text-align: center;
+  width: 100%;
+}
 #profile-pic-modal .heading-text{
   font-size: 18px;
   margin-bottom: 10px;
@@ -42,4 +48,10 @@
   z-index: 999;
   font-size: 20px;
   cursor: pointer;
+}
+.img-container {
+  width: 100%;
+}
+.cropper-container{
+  margin: 22px auto;
 }
